syntax = "proto3";

option csharp_namespace = "GrpcClient.Protos";

package recipe;

service recipe{
	rpc GetAllRecipes(EmptyRequest) returns (RecipeList);
	rpc GetRecipe(RecipeRequest) returns (Recipe);
	rpc AddRecipe(Recipe) returns (RecipeResponse);
	rpc EditRecipe(EditRecipeRequest) returns (RecipeResponse);
	rpc DeleteRecipe(RecipeRequest) returns (RecipeResponse);
	rpc GetAllCategories(EmptyRequest) returns (CategoryList);
	rpc AddCategory(Category) returns (CategoryResponse);
	rpc EditCategory(EditCategoryRequest) returns (CategoryResponse);
	rpc DeleteCategory(Category) returns (CategoryResponse);
}

message Recipe{
	bytes id = 1;
	string title = 2;
	string ingredients = 3;
	string instructions = 4;
	repeated string categories = 5;
}

message Category{
	string categoryName = 1;
}

message RecipeList{
	repeated Recipe recipes = 1;
}

message CategoryList{
	repeated string categories = 1;
}

message EditRecipeRequest{
	string id = 1;
	Recipe newRecipe = 2;
}

message EditCategoryRequest{
	string oldCategory = 1;
	string newCategory = 2;
}

message RecipeRequest{
	string id = 1;
}

message RecipeResponse{
	int32 statusCode = 1;
	Recipe recipe = 2;
}

message CategoryResponse{
	int32 statusCode = 1;
}

message EmptyRequest{
}